[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "revizor-fuzzer"
version = "1.3.1"
description = "A fuzzer to search for microarchitectural leaks in CPUs"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Typing :: Typed",
]
dependencies = [
    "unicorn==1.0.3",
    "pyyaml",
    "types-pyyaml",
    "numpy",
    "pyelftools",
    "xxhash",
    "scipy",
    "mypy",
    "flake8"
]
maintainers = [{name = "Oleksii Oleksenko", email = ""}]

[project.urls]
"Homepage" = "https://microsoft.github.io/sca-fuzzer/"
"Source code" = "https://github.com/microsoft/sca-fuzzer"
"Bug Tracker" = "https://github.com/microsoft/sca-fuzzer/issues"
"Changelog" = "https://github.com/microsoft/sca-fuzzer/releases"

[tool.hatch.build.sources]
"src" = "revizor"

[tool.hatch.build]
exclude = [
  "demo/",
  "docs/",
  "mkdocs-overrides/",
  "src/x86/executor/",
  "tests/",
  "tests/x86_tests/",
  "tests/x86_tests/",
  "base.json",
  "site/",
  "dbg/",
  "revizor.code-workspace",
]

[tool.hatch.build.targets.wheel]
packages = ["revizor"]

[project.scripts]
rvzr = "revizor.cli:main"
